# ChangeLog for dev-haskell/xml-hamlet
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/xml-hamlet/ChangeLog,v 1.7 2015/04/05 01:22:12 gienah Exp $

*xml-hamlet-0.4.0.10 (05 Apr 2015)

  05 Apr 2015; Mark Wright <gienah@gentoo.org> +xml-hamlet-0.4.0.10.ebuild:
  Bump xml-hamlet to 0.4.0.10

*xml-hamlet-0.4.0.9 (14 Dec 2014)

  14 Dec 2014; Mark Wright <gienah@gentoo.org> +xml-hamlet-0.4.0.9.ebuild:
  Bump xml-hamlet to 0.4.0.9

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*xml-hamlet-0.4.0.8 (02 Jul 2014)

  02 Jul 2014; Mark Wright <gienah@gentoo.org> +xml-hamlet-0.4.0.8.ebuild:
  Bump xml-hamlet to 0.4.0.8

*xml-hamlet-0.4.0.6 (11 Dec 2013)

  11 Dec 2013; Mark Wright <gienah@gentoo.org> +xml-hamlet-0.4.0.6.ebuild:
  Bump xml-hamlet to 0.4.0.6

*xml-hamlet-0.4.0.5 (13 Sep 2013)

  13 Sep 2013; Mark Wright <gienah@gentoo.org> +xml-hamlet-0.4.0.5.ebuild:
  Bump xml-hamlet to 0.4.0.5

*xml-hamlet-0.4.0.4 (26 Aug 2013)

  26 Aug 2013; Alexander Vershilov <qnikst@gentoo.org> +metadata.xml,
  +xml-hamlet-0.4.0.4.ebuild:
  dev-haskell/xml-hamlet: initial layout