@@ -1,0 +1,31 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/xml-hamlet/xml-hamlet-0.4.0.11.ebuild,v 1.1 2015/08/01 11:44:00 slyfox Exp $
+
+EAPI=5
+
+# ebuild generated by hackport 0.4.5.9999
+
+CABAL_FEATURES="lib profile haddock hoogle hscolour test-suite"
+inherit haskell-cabal
+
+DESCRIPTION="Hamlet-style quasiquoter for XML content"
+HOMEPAGE="http://www.yesodweb.com/"
+SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0/${PV}"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND=">=dev-haskell/parsec-2.0:=[profile?] <dev-haskell/parsec-3.2:=[profile?]
+	>=dev-haskell/shakespeare-1.0:=[profile?] <dev-haskell/shakespeare-2.2:=[profile?]
+	>=dev-haskell/text-0.10:=[profile?]
+	>=dev-haskell/xml-conduit-1.0:=[profile?] <dev-haskell/xml-conduit-1.4:=[profile?]
+	>=dev-lang/ghc-7.4.1:=
+"
+DEPEND="${RDEPEND}
+	>=dev-haskell/cabal-1.8
+	test? ( >=dev-haskell/hspec-1.3
+		dev-haskell/hunit )
+"
