@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/xml-hamlet
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/xml-hamlet/ChangeLog,v 1.7 2015/04/05 01:22:12 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/xml-hamlet/ChangeLog,v 1.8 2015/08/01 11:44:00 slyfox Exp $
+
+*xml-hamlet-0.4.0.11 (01 Aug 2015)
+
+  01 Aug 2015; Sergei Trofimovich <slyfox@gentoo.org>
+  +xml-hamlet-0.4.0.11.ebuild:
+  Version bump.
 
 *xml-hamlet-0.4.0.10 (05 Apr 2015)
 
